# svm_experiments

./: .gitignore  PC_data.ipynb  README.md  alex-plots.py  execution_analysis.py  memory_analysis.py  pyproject.toml  rss_vsz.py
Archive/: transaction_log_128gb_analysis copy.ipynb  transaction_log_128gb_analysis.ipynb  transaction_log_256gb_analysis copy.ipynb  transaction_log_256gb_analysis.ipynb  transaction_log_512gb_analysis.ipynb
MEM analyisis_memory/: 1_TB_memory_template_simple.ipynb  256GB_memory.ipynb  256GB_memory_template_simple.ipynb  512GB_memory_template_simple.ipynb
MEM analysis_memory/: 256GB_memory.ipynb  memory_template.ipynb
MEM analysis_tps/: 128GB_analysis.ipynb  512GB_analysis.ipynb  512GB_analysis_1.ipynb
PC analyisis_memory/: memory_template_simple.ipynb
PC analysis_tps/: 2048PC_analysis.ipynb  512PC_analysis.ipynb
scripts/: find_runtime.py  find_runtime_folder.py
