[tool.poetry]
name = "fenbushi-data-analysis-sugihara"
version = "0.1.0"
description = ""
authors = ["sugihara1997 <bananaprince9317@gmail.com>", "Turan Vural <turanzv@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
plotly= "^5.24.1"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"